--- a/src/Components/Header/CartButton.module.css
+++ b/src/Components/Header/CartButton.module.css
@@ -9,6 +9,12 @@
     padding: 15px 25px;
     font-size: 20px;
     font-weight: 700;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+}
+
+.CartButton:hover {
+    transform: translateY(-5px);
 }
 
 .cartNumber {
