--- a/src/Components/UI/Modal.module.css
+++ b/src/Components/UI/Modal.module.css
@@ -49,7 +49,7 @@
 }
 
 .modalClose button {
-    background-color: salmon;
+    background-color: magenta;
     border: none;
     display: inline-block;
     width: 100%;
@@ -65,7 +65,7 @@
 }
 
 .modalClose button:hover {
-    background-color: orangered;
+    background-color: darkmagenta;
 }
 
 @keyframes slide-down {
