creating branch for type select

--- a/src/Components/UI/Modal.module.css
+++ b/src/Components/UI/Modal.module.css
@@ -49,7 +49,7 @@
 }
 
 .modalClose button {
-    background-color: magenta;
+    background-color: #E59204;
     border: none;
     display: inline-block;
     width: 100%;
