--- a/src/Components/Cart/CartForm.module.css
+++ b/src/Components/Cart/CartForm.module.css
@@ -5,14 +5,14 @@
 .cartForm input {
     width: 45px;
     margin-right: 5px;
-    border: 1px solid salmon;
+    border: 1px solid #EB9609;
     padding: 5px;
     font-weight: 700;
 }
 
 .cartForm button {
     margin-left: 5px;
-    background-color: salmon;
+    background-color: #EB9609;
     border: none;
     padding: 10px 20px;
     border-radius: 20px;
