--- a/src/Components/Header/CartButton.module.css
+++ b/src/Components/Header/CartButton.module.css
@@ -2,8 +2,7 @@
     position: absolute;
     top: 100px;
     right: 20px;
-
-    background-color: rgb(78, 9, 55);
+    background-color: #EB9609;
     color: #fff;
     border-radius: 35px;
     padding: 15px 25px;
@@ -12,6 +11,14 @@
     cursor: pointer;
     z-index: 8;
 }
+
+.cart {
+    transition: 0.3s ease-in-out;
+}
+
+
+
+
 
 .cartNumber {
     display: flex;
@@ -25,4 +32,13 @@
     border-radius: 100%;
     background-color: antiquewhite;
     color: rgb(78, 9, 55);
+    transition: 0.3s ease-in-out;
+}
+
+.CartButton:hover .cart {
+    color: greenyellow;
+}
+
+.CartButton:hover .cartNumber {
+    background-color: greenyellow;
 }
