--- a/src/Components/Header/CartButton.module.css
+++ b/src/Components/Header/CartButton.module.css
@@ -1,7 +1,5 @@
 .CartButton {
-    position: absolute;
-    top: 100px;
-    right: 20px;
+
     background-color: #EB9609;
     color: #fff;
     border-radius: 35px;
@@ -12,13 +10,23 @@
     z-index: 8;
 }
 
+.postionOnTop {
+    position: fixed;
+    top: 100px;
+    right: 20px;
+    transition: 0.3s ease;
+}
+
+.positionOnScroll {
+    position: fixed;
+    top: 10px;
+    right: 20px;
+    transition: 0.3s ease;
+}
+
 .cart {
     transition: 0.3s ease-in-out;
 }
-
-
-
-
 
 .cartNumber {
     display: flex;
@@ -41,4 +49,17 @@
 
 .CartButton:hover .cartNumber {
     background-color: greenyellow;
+}
+
+.show {
+    position: relative;
+    transition: 0.5s ease;
+}
+
+.hide {
+    position: absolute;
+    right: -999px;
+    transition: 0.5s ease;
+    overflow: hidden;
+    width: 0px;
 }
