--- a/src/Components/Cart/CartItems.module.css
+++ b/src/Components/Cart/CartItems.module.css
@@ -9,6 +9,7 @@
 }
 
 .action {
+    cursor: pointer;
     margin: 10px;
     border: 1px solid salmon;
     width: 35px;
@@ -20,4 +21,9 @@
     font-weight: 400;
     color: salmon;
     border-radius: 4px;
+}
+
+.action:hover {
+    color: green;
+    border-color: green;
 }
