--- a/src/Components/Header/CartButton.module.css
+++ b/src/Components/Header/CartButton.module.css
@@ -63,3 +63,30 @@
     overflow: hidden;
     width: 0px;
 }
+
+.bump {
+    animation: bump 300ms ease-out;
+}
+
+@keyframes bump {
+    0% {
+        transform: scale(1);
+    }
+
+    10% {
+        transform: scale(0.9);
+    }
+
+    30% {
+        transform: scale(1.1);
+    }
+
+    50% {
+        transform: scale(1.15);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+
+}
